--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,25 @@ body {
     top: 170px;
     left: 520px;
 }
+
+.instructions {
+    position: absolute;
+    top: 10px;
+    right: 350px;
+    width: 600px;
+    font-family: cursive;
+    font-size: 2.25rem;
+}
+
+.throw, .pose {
+    width: 50%;
+}
+
+.pose {
+    margin-left: 45%;
+}
+
+.instructions h3 {
+    text-align: center;
+    margin: 0;
+}
