--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
 .instructions {
     position: absolute;
     top: 10px;
-    right: 350px;
+    right: 5%;
     width: 600px;
     font-family: cursive;
     font-size: 2.25rem;
