make hadouken position more dynamic

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
 .main {
     background-color: white;
     margin-top: 110px;
-    /* padding-left: 100px; */
     min-width: 1350px;
     height: 500px;
     position: relative;
@@ -66,7 +65,7 @@ body {
     position: absolute;
     z-index: 10;
     top: 170px;
-    left: 520px;
+    left: 400px;
 }
 
 .hulk-hadouken {
@@ -82,7 +81,7 @@ body {
     position: absolute;
     z-index: 10;
     top: 170px;
-    left: 1020px;
+    left: calc(100% - 540px);
 }
 
 .instructions {
